; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_sunxi_gfx.c_sunxi_gfx_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_sunxi_gfx.c_sunxi_gfx_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sunxi_video = type { i32, i32, %struct.sunxi_video*, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @sunxi_gfx_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sunxi_gfx_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.sunxi_video*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.sunxi_video*
  store %struct.sunxi_video* %5, %struct.sunxi_video** %3, align 8
  %6 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %7 = getelementptr inbounds %struct.sunxi_video, %struct.sunxi_video* %6, i32 0, i32 6
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %17, label %10

10:                                               ; preds = %1
  %11 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %12 = getelementptr inbounds %struct.sunxi_video, %struct.sunxi_video* %11, i32 0, i32 0
  store i32 0, i32* %12, align 8
  %13 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %14 = getelementptr inbounds %struct.sunxi_video, %struct.sunxi_video* %13, i32 0, i32 5
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @sthread_join(i32 %15)
  br label %17

17:                                               ; preds = %10, %1
  %18 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %19 = getelementptr inbounds %struct.sunxi_video, %struct.sunxi_video* %18, i32 0, i32 4
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @slock_free(i32 %20)
  %22 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %23 = getelementptr inbounds %struct.sunxi_video, %struct.sunxi_video* %22, i32 0, i32 3
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @scond_free(i32 %24)
  %26 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %27 = getelementptr inbounds %struct.sunxi_video, %struct.sunxi_video* %26, i32 0, i32 2
  %28 = load %struct.sunxi_video*, %struct.sunxi_video** %27, align 8
  %29 = call i32 @free(%struct.sunxi_video* %28)
  %30 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %31 = call i32 @sunxi_restore_console(%struct.sunxi_video* %30)
  %32 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %33 = getelementptr inbounds %struct.sunxi_video, %struct.sunxi_video* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @sunxi_disp_close(i32 %34)
  %36 = load %struct.sunxi_video*, %struct.sunxi_video** %3, align 8
  %37 = call i32 @free(%struct.sunxi_video* %36)
  ret void
}

declare dso_local i32 @sthread_join(i32) #1

declare dso_local i32 @slock_free(i32) #1

declare dso_local i32 @scond_free(i32) #1

declare dso_local i32 @free(%struct.sunxi_video*) #1

declare dso_local i32 @sunxi_restore_console(%struct.sunxi_video*) #1

declare dso_local i32 @sunxi_disp_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
